# plato-diffusion

./: AGENT.md  Cargo.toml  DEPENDENCIES.md  README.md
src/: lib.rs
