[package]
name = "plato-diffusion"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Progressive distillation pipeline for PLATO room intelligence"
repository = "https://github.com/SuperInstance/plato-diffusion"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1"
